@@ -13,7 +13,6 @@ export(aboot)
 export(addhierarchy)
 export(as.genclone)
 export(bitwise.dist)
-export(bitwise.pgen)
 export(bruvo.boot)
 export(bruvo.dist)
 export(bruvo.msn)
@@ -39,6 +38,7 @@ export(mlg.table)
 export(mlg.vector)
 export(namehierarchy)
 export(nei.dist)
+export(pgen)
 export(plot_poppr_msn)
 export(poppr)
 export(poppr.all)
